<resources>
    <string name="app_name">ЕГЭ300баллов</string>
    <string name="textView">ВЫБЕРИТЕ ВАРИАНТ</string>
    <string name="button1">Вариант 1</string>
    <string name="button2">Вариант 2</string>
    <string name="button3">Вариант 3</string>
    <string name="button4">Вариант 4</string>
    <string name="button5">Вариант 5</string>
    <string name="button6">Вариант 6</string>
    <string name="button7">Вариант 7</string>
    <string name="button8">Вариант 8</string>
    <string name="button9">Вариант 9</string>
    <string name="button10">Вариант 10</string>
    <string name="textview2">1.</string>
    <string name="textview1">Вариант 1</string>
    <string name="textview">2.</string>
    <string name="edit">Введите ответ</string>
    <string name="result">Завершить и узнать ответ</string>

</resources>
