<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".var4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Вариант 4"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/white"
            android:text="начать тестирование"
            android:textColor="@android:color/holo_green_dark"
            android:visibility="visible" />


        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <ImageView
            android:id="@+id/v3im1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:srcCompat="@drawable/v3im1"
            android:contentDescription="@string/textview1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText1"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/edit"
                android:inputType="numberDecimal"
                android:digits="0123456789.,-"
                android:imeOptions="actionNext"/>

            <TextView
                android:id="@+id/textView1.1"
                android:layout_width="268dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <ImageView
            android:id="@+id/v3im2"
            android:layout_width="match_parent"
            android:layout_height="325dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/v3im2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText2"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/edit"
                android:inputType="numberDecimal"
                android:digits="0123456789.,-"
                android:imeOptions="actionNext"/>

            <TextView
                android:id="@+id/textView2.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="3."
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <ImageView
            android:id="@+id/v2im3"
            android:layout_width="match_parent"
            android:layout_height="325dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/v2im3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText3"
                android:layout_width="201dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/edit"
                android:inputType="numberDecimal"
                android:digits="0123456789.,-" />

            <TextView
                android:id="@+id/textView3.3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="4."
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <ImageView
            android:id="@+id/v2im4"
            android:layout_width="match_parent"
            android:layout_height="325dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/v2im3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText4"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/edit"
                android:inputType="numberDecimal"
                android:digits="0123456789.,-"
                android:imeOptions="actionNext"/>

            <TextView
                android:id="@+id/textView4.4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="5."
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <ImageView
            android:id="@+id/v2im5"
            android:layout_width="match_parent"
            android:layout_height="325dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/v2im5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText5"
                android:layout_width="201dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/edit"
                android:inputType="numberDecimal"
                android:digits="0123456789.,-"
                android:imeOptions="actionNext"/>

            <TextView
                android:id="@+id/textView5.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="6."
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <ImageView
            android:id="@+id/v2im6"
            android:layout_width="match_parent"
            android:layout_height="325dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/v2im6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText6"
                android:layout_width="201dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/edit"
                android:inputType="numberDecimal"
                android:digits="0123456789.,-"
                android:imeOptions="actionNext"/>

            <TextView
                android:id="@+id/textView6.6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="7."
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <ImageView
            android:id="@+id/v2im7"
            android:layout_width="match_parent"
            android:layout_height="325dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/v2im7" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText7"
                android:layout_width="201dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/edit"
                android:inputType="numberDecimal"
                android:digits="0123456789.,-"
                android:imeOptions="actionNext"/>

            <TextView
                android:id="@+id/textView7.7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="8."
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <ImageView
            android:id="@+id/v2im8"
            android:layout_width="match_parent"
            android:layout_height="325dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/v2im8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText8"
                android:layout_width="201dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/edit"
                android:inputType="numberDecimal"
                android:digits="0123456789.,-"
                android:imeOptions="actionNext"/>

            <TextView
                android:id="@+id/textView8.8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="9."
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <ImageView
            android:id="@+id/v2im9"
            android:layout_width="match_parent"
            android:layout_height="325dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/v2im9" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText9"
                android:layout_width="201dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/edit"
                android:inputType="numberDecimal"
                android:digits="0123456789.,-"
                android:imeOptions="actionNext"/>

            <TextView
                android:id="@+id/textView9.9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="10."
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <ImageView
            android:id="@+id/v2im10"
            android:layout_width="match_parent"
            android:layout_height="325dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/v2im10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText10"
                android:layout_width="201dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/edit"
                android:inputType="numberDecimal"
                android:digits="0123456789.,-"
                android:imeOptions="actionNext"/>

            <TextView
                android:id="@+id/textView10.10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="11."
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <ImageView
            android:id="@+id/v2im11"
            android:layout_width="match_parent"
            android:layout_height="325dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/v2im11" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText11"
                android:layout_width="201dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/edit"
                android:inputType="numberDecimal"
                android:digits="0123456789.,-"
                android:imeOptions="actionNext"/>

            <TextView
                android:id="@+id/textView11.11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="12."
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <ImageView
            android:id="@+id/v2im12"
            android:layout_width="match_parent"
            android:layout_height="325dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/v2im12" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTex12"
                android:layout_width="201dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/edit"
                android:inputType="numberDecimal"
                android:digits="0123456789.-," />

            <TextView
                android:id="@+id/textView12.12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </LinearLayout>

        <Button
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result" />

    </LinearLayout>

</ScrollView>